--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,8 @@
     <string name="inquiry">查询</string>
     <string name="meeting">会议</string>
 
+    <string name="verification">验证</string>
+    <string name="reset">重置</string>
     <string name="login">登录</string>
     <string name="user_name">用户名</string>
     <string name="user_pwd">密码</string>
@@ -136,5 +138,6 @@
 
     <string name="add">添加</string>
     <string name="company_constant">企业联系人</string>
+    <string name="company_related">关联企业</string>
 
 </resources>
